--- a/Watches/pom.xml
+++ b/Watches/pom.xml
@@ -38,6 +38,12 @@
     <artifactId>spring-webmvc</artifactId>
     <version>4.3.0.RELEASE</version>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+<dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
     
   </dependencies>
   <build>
