--- a/Watches/src/main/webapp/WEB-INF/web.xml
+++ b/Watches/src/main/webapp/WEB-INF/web.xml
@@ -13,16 +13,21 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <servlet-class>
         org.springframework.web.servlet.DispatcherServlet
     </servlet-class>
-    <init-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
-    </init-param>
+    
     <load-on-startup>1</load-on-startup>
  </servlet>
+ <context-param>
+
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+  
+ </context-param>
  
  <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>/</url-pattern>
  </servlet-mapping>
- 
+ <listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 </web-app>
